@@ -1,6 +1,7 @@
 package zaur.collection;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class ArrayListMethod {
@@ -12,11 +13,12 @@ public class ArrayListMethod {
         list.add("Sveta");
         list.add("Elena");
 
-        List<Integer> list1 = List.of(3, 8, 13);
+        List<Integer> list1 = Arrays.asList(3, 8, 13);
         System.out.println(list1);
 //        list1.add(100);
 
-        List<String> list2 = List.copyOf(list);
+        List<String> list2 = new ArrayList<>();
+        list2.addAll(list);
         System.out.println(list2);
     }
 }
